# xontrib-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  copier.yml  extensions.py  pyproject.toml  setup.py
.github/: FUNDING.yml  publish.yml  test.yml
.github/ISSUE_TEMPLATE/: idea.md  new-issue.md
.github/workflows/: push-test.yml  test.yml
hooks/: post_gen_project.py
project-template/{{ project_repo_name }}/: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  {% if enable_pre_commit_hooks %}.pre-commit-config.yaml{%endif%}
project-template/{{ project_repo_name }}/.github/: release-drafter.yml
project-template/{{ project_repo_name }}/.github/ISSUE_TEMPLATE/: new-issue.md
project-template/{{ project_repo_name }}/.github/workflows/: release-drafter.yml  release.yml  test.yml
project-template/{{ project_repo_name }}/tests/: test_xontrib.py
project-template/{{ project_repo_name }}/xontrib/: {{project_package_name}}.{%if pure_py %}py{%else%}xsh{%endif%}
project-template/{{ project_repo_name }}/{% if not enable_autoloading %}xontrib{%endif%}/: {{project_package_name}}.{%if pure_py %}py{%else%}xsh{%endif%}  {{project_package_name}}{%if pure_py %}.py{%else%}.xsh{%endif%}
project-template/{{ project_repo_name }}/{%if enable_autoloading%}{{ project_repo_name }}{%endif%}/: main.py  {% if has_aliases %}aliases.py{%endif%}
project-template/{{ project_repo_name }}/{%if enable_autoloading%}{{ py_module_name }}{%endif%}/: main.py  {%if has_events %}event_hooks.py{%endif%}
project-template/{{_copier_conf.project_repo_name}}/: LICENSE  README.md  pyproject.toml
project-template/{{_copier_conf.project_repo_name}}/.github/workflows/: release.yml  test.yml
project-template/{{_copier_conf.project_repo_name}}/tests/: test_xontrib.py
project-template/{{_copier_conf.project_repo_name}}/xontrib/: {{_copier_conf.project_package_name}}.{%if pure_py %}py{%else%}xsh{%endif%}
tests/: conftest.py  data.py  helpers.py  test_generation.py  tests.py
xontrib/: {{cookiecutter.project_slug}}.py
xontrib-{{cookiecutter.project_repo_name}}/xontrib/: {{cookiecutter.project_package_name}}.xsh
xontrib-{{cookiecutter.project_slug}}/: README.md  README.rst  setup.py
xontrib-{{cookiecutter.project_slug}}/xontrib/: {{cookiecutter.project_slug}}.xsh
{{cookiecutter.project_repo_name}}/: .pre-commit-config.yaml  README.md  pyproject.toml.jinja2  requirements.txt  setup.py
{{cookiecutter.project_repo_name}}/.github/: issue_template.md  pull_request_template.md
{{cookiecutter.project_repo_name}}/.github/workflows/: push-test.yml  release.yml  test.yml
{{cookiecutter.project_slug}}/: README.rst  setup.cfg  setup.py
{{cookiecutter.project_slug}}/xontrib/: {{cookiecutter.project_slug}}.xsh
