[tool.poetry]
name = "xontrib-cookiecutter"
version = "0.1.0"
description = "Cookiecutter template for Xontrib"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
validate-pyproject = {extras = ["all"], version = "^0.7.2"}
tomli = "^2.0.1"
copier = "6.*"
cookiecutter = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]