[build-system]
requires = [
    "setuptools>=62",
    "wheel", # for bdist package distribution
]
build-backend = "setuptools.build_meta"

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "xontrib-template"
version = "0.2.0"
description = "Full-featured template for building extension (xontrib) for the xonsh shell."
authors = [
    { name = "Your Name", email = "you@example.com" },
]
license = { text = "MIT" }
requires-python = ">=3.8,<4.0"
dependencies = [
    "copier>=7",
    "cookiecutter<2.0.0,>=1.7.3",
    "jinja2-time",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "validate-pyproject[all]<1.0.0,>=0.7.2",
    "tomli<3.0.0,>=2.0.1",
    "xonsh>=0.12.5",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
[tool.pdm]
[tool.pdm.dev-dependencies]

[tool.semantic_release]
version_toml = "pyproject.toml:project.version"
version_source = "tag"
