[metadata]
name = xontrib-{{cookiecutter.project_slug}}
version = {{cookiecutter.version}}
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
description = {{cookiecutter.project_short_description}}
long_description = file: README.rst
url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.5

install_requires =
    xonsh
