{% if package_manager == 'poetry' %}
[tool.poetry]
name = "{{project_repo_name}}"
version = "{{version}}"
description = "{{project_short_description}}"
authors = ["{{full_name}} <{{email}}>"]

license = "MIT"
readme = "README.md"

repository = "https://github.com/{{github_username}}/{{project_repo_name}}"
keywords = ['xontrib', 'xonsh']
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
    "Programming Language :: Python :: 3",
]
    {% if not enable_autoloading %}
packages = [{ include = "xontrib" }]
    {%- endif %}
{% else %}
[project]
name = "{{project_repo_name}}"
version = "{{version}}"
license = {file = "LICENSE"}
description = "{{project_short_description}}"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
]
requires-python = ">=3.8"
dependencies = ["xonsh>=0.12.5"]
authors = [
    { name = "{{full_name}}", email = "{{email}}" },
]
[project.readme]
file = "README.md"
content-type = "text/markdown"
{% endif %}

{% if enable_autoloading %}
[{% if package_manager == 'poetry' %}tool.poetry.plugins{% else %}project.entry-points{% endif %}."xonsh.xontribs"]
"{{project_package_name}}" = "{{ py_module_name }}.main"
{% endif %}

{% if package_manager == 'poetry' %}
[tool.poetry.urls]
{% else %}
[project.urls]
{% endif %}
Homepage = "https://github.com/{{github_username}}/{{project_repo_name}}"
Documentation = "https://github.com/{{github_username}}/{{project_repo_name}}/blob/master/README.md"
Code = "https://github.com/{{github_username}}/{{project_repo_name}}"
"Issue tracker" = "https://github.com/{{github_username}}/{{project_repo_name}}/issues"

{% if package_manager == 'poetry' %}
[tool.poetry.dependencies]
python = ">=3.8"
xonsh = ">=0.12.5"
{% endif %}

{% if package_manager == 'poetry' %}
[tool.poetry.dev-dependencies]
pytest = ">=7.0"
{% else %}
[project.optional-dependencies]
dev = ["pytest>=7.0"]
{% endif %}

{% if package_manager == 'poetry' %}
[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
{% else %}
[build-system]
requires = [
    "setuptools>=62",
    "wheel",               # for bdist package distribution
]
build-backend = "setuptools.build_meta"
[tool.setuptools]
    {% if not enable_autoloading %}
packages = ["xontrib"]
package-dir = {xontrib = "xontrib"}
    {% endif %}
platforms = ["any"]
include-package-data = false
[tool.setuptools.package-data]
    {% if not enable_autoloading %}
xontrib = ["*.xsh"]
    {% endif %}
{% endif %}

[tool.black]
include = '\.pyi?$'
force-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.vscode
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | disk-cache.sqlite3
)/
'''

[tool.ruff]
select = [
    "E",
    "F",
    "B", # flake8-bugbear
    "I", # isort
    "UP", # pyupgrade
    "SIM", # simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff specific rules
]
