{% if _copier_conf.package_manager == 'poetry' %}
[tool.poetry]
name = "{{_copier_conf.project_repo_name}}"
version = "{{_copier_conf.version}}"
description = "{{_copier_conf.project_short_description}}"
authors = ["{{_copier_conf.full_name}} <{{_copier_conf.email}}>"]

license = "MIT"
readme = "README.md"

repository = "https://github.com/{{_copier_conf.github_username}}/{{_copier_conf.project_repo_name}}"
keywords = ['xontrib', 'xonsh']
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "xontrib" }]
{% else %}
[project]
name = "{{_copier_conf.project_repo_name}}"
version = "{{_copier_conf.version}}"
license = {file = "LICENSE"}
description = "{{_copier_conf.project_short_description}}"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
]
requires-python = ">=3.6"
dependencies = ["xonsh"]
[[project.authors]]
name = "{{_copier_conf.full_name}}"
email = "{{_copier_conf.email}}"
[project.readme]
file = "README.md"
content-type = "text/markdown"
{% endif %}

{% if _copier_conf.package_manager == 'poetry' %}
[tool.poetry.urls]
{% else %}
[project.urls]
{% endif %}
Homepage = "https://github.com/{{_copier_conf.github_username}}/{{_copier_conf.project_repo_name}}"
Documentation = "https://github.com/{{_copier_conf.github_username}}/{{_copier_conf.project_repo_name}}/blob/master/README.md"
Code = "https://github.com/{{_copier_conf.github_username}}/{{_copier_conf.project_repo_name}}"
"Issue tracker" = "https://github.com/{{_copier_conf.github_username}}/{{_copier_conf.project_repo_name}}/issues"

{% if _copier_conf.package_manager == 'poetry' %}
[tool.poetry.dependencies]
python = ">=3.7"
xonsh = ">=0.11"
{% endif %}

{% if _copier_conf.package_manager == 'poetry' %}
[tool.poetry.dev-dependencies]
pytest = ">=7.0"
{% else %}
[project.optional-dependencies]
dev = ["pytest>=7.0"]
{% endif %}

{% if _copier_conf.package_manager == 'poetry' %}
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
{% else %}
[build-system]
requires = [
    "setuptools>=61",
    "wheel",               # for bdist package distribution
]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["xontrib"]
package-dir = {xontrib = "xontrib"}
platforms = ["any"]
include-package-data = false
[tool.setuptools.package-data]
xontrib = ["*.xsh"]
{% endif %}

[tool.isort]
profile = "black"

[tool.black]
include = '\.pyi?$'
force-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.vscode
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | disk-cache.sqlite3
)/
'''
